# LabFlow_Pro

./: Cargo.toml  gen_icon.py  package-lock.json  package.json
.history/: .gitignore_20260413192929  Cargo_20260413192522.toml
.history/agent-runtime/: pyproject_20260413192453.toml  requirements_20260413192522.txt
.history/core-engine/: Cargo_20260413192522.toml  Cargo_20260413205414.toml  Cargo_20260422165156.toml  Cargo_20260424181957.toml
.history/core-engine/src/: background_worker_20260424182533.rs  blob_storage_20260423214943.rs  crdt_20260413202216.rs  crdt_20260415152613.rs  crdt_20260416124048.rs  crdt_20260416204420.rs  crdt_20260416204525.rs  crdt_20260416204546.rs  data_ingestion_20260415144114.rs  data_ingestion_20260416123937.rs  data_ingestion_20260417130156.rs  lib_20260413192522.rs  lib_20260413211314.rs  lib_20260414185804.rs  lib_20260415144414.rs  lib_20260422145951.rs  lib_20260422173238.rs  lib_20260424175244.rs  lib_20260424182302.rs  plugin_manager_20260422173222.rs  plugin_manager_20260422173645.rs  plugin_manager_20260422174434.rs  (+7 more)
.history/host-service/: go_20260413192522.mod
.history/ui-desktop/: .gitignore_20260413205414  index_20260413205211.html  package_20260413205211.json  package_20260416190313.json  tsconfig_20260413205414.json  vite.config_20260413205414.ts
core-engine/src/: blob_storage.rs  crdt.rs  data_ingestion.rs  db.rs  lib.rs  sandbox.rs  shadow.rs
host-service/: go.mod
proto/: labflow.proto
ui-desktop/: package-lock.json  package.json
ui-desktop/src/: App.tsx  styles.css
ui-desktop/src-tauri/: tauri.conf.json
(+373 files in other folders)
