[workspace]
resolver = "2"
members = [
    "core-engine",
    "ui-desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LabFlow Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }
# Protobuf
prost = "0.13"
# Python FFI
pyo3 = { version = "0.22", features = ["abi3-py39"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
